Partial fix for NW-350: Refactored with Files.readString().